# maradns_manager

./: .gitignore  CMakeLists.txt  README.md  TxtHandler.cpp  TxtHandler.h  config.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
lang/: zh_CN.ts
